--- a/terraform/cloudinit.tmpl
+++ b/terraform/cloudinit.tmpl
@@ -10,4 +10,4 @@ packages:
   - ansible
 runcmd:
   - echo '[local]\n127.0.0.1 ansible_connection=local' > /etc/ansible/hosts
-  - ansible-pull -U https://github.com/jacobludriks/tf2server ansible/playbook.yml
+  - ansible-pull -U https://github.com/tf2oe/tf2server ansible/playbook.yml
